      multiarch-packagename strings
    - load the dpkg base arguments only one time and reuse them later
  * cmdline/apt-get.cc:
    - follow Provides in the evaluation of saving candidates, too, for
      statisfying garbage package dependencies (Closes: #640590)
  * apt-pkg/algorithms.cc:
    - if a package is garbage, don't try to save it with FixByInstall

 -- David Kalnischkies <kalnischkies@gmail.com>  Tue, 20 Sep 2011 14:19:38 +0200

apt (0.8.16~exp6) experimental; urgency=low

  [ Christopher Baines ]
  * enable APT in unpack/configure ordering to handle loops as well
    as tight dependencies between immediate packages better
    enabling also the possibility to mark all packages as immediate
    (at least Closes: #353290, #540227, #559733, #621836, #639290)

  [ David Kalnischkies ]
  * [abi-break] Support large files in the complete toolset. Indexes of this
    size are pretty unlikely for now, but we need it for deb
    packages which could become bigger than 4GB now (LP: #815895)
  * merged the debian-sid branch
  
  [ Michael Vogt ]
  * bump ABI version

 -- Michael Vogt <mvo@debian.org>  Wed, 14 Sep 2011 21:06:51 +0200

apt (0.8.16~exp5) experimental; urgency=low

  * merged the latest debian-sid fixes
  * apt-pkg/makefile:
    - install sha256.h compat header
  * apt-pkg/pkgcachegen.{cc,h}:
    - use ref-to-ptr semantic in NewDepends() to ensure that the   
      libapt does not segfault if the cache is remapped in between
      (LP: #812862)
    - fix crash when P.Arch() was used but the cache got remapped
  * apt-pkg/acquire-item.{cc,h}:
    - do not check for a "Package" tag in optional index targets
      like the translations index
  * apt-pkg/acquire.cc:
    - fix potential divide-by-zero
  * methods/mirror.cc:
    - include the architecture(s) in the query string as well so 
      that the server can make better decisions

 -- Michael Vogt <mvo@debian.org>  Mon, 15 Aug 2011 14:52:54 +0200

apt (0.8.16~exp4) experimental; urgency=low
