@@ -13,8 +13,10 @@ apt (0.8.16~exp7) experimental; urgency=low
       statisfying garbage package dependencies (Closes: #640590)
   * apt-pkg/algorithms.cc:
     - if a package is garbage, don't try to save it with FixByInstall
+  * apt-pkg/deb/debsrcrecords.cc:
+    - remove the limit of 400 Binaries for a source package (Closes: #622110)
 
- -- David Kalnischkies <kalnischkies@gmail.com>  Tue, 20 Sep 2011 14:19:38 +0200
+ -- David Kalnischkies <kalnischkies@gmail.com>  Wed, 21 Sep 2011 19:29:55 +0200
 
 apt (0.8.16~exp6) experimental; urgency=low
 
